# smart-mirror-diy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  smartmirror.py
imgs/: CREDITS.txt
utils/: clock.py  display.py  display_class.py  read_yaml.py  text.py  train.py  weather.py
utils/archive/: clock.py  display.py
