[tool.poetry]
name = "mirror"
version = "0.1.0"
description = "\"\""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
pillow = "^9.0.0"
pre-commit = "^2.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
