[tool.poetry]
name = "mirror"
version = "1.0.0"
description = "\"\""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
