[tool.poetry]
name = "mirror"
version = "1.0.0"
description = "\"\""
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29"
pillow = "^10.0.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
